@@ -1,0 +1,5 @@
+module Lobbyist
+  class EnterpriseSetting < Lobbyist::Base
+
+  end
+end
